# OpenCV4AndroidDemo

./: .gitignore  README.md  gradle.properties  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/win/intheworld/opencv4androiddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/ORB_SLAM2_Android/: CMakeLists.txt  orb_slam2_android_OrbSlam2Helper.cpp  orb_slam2_android_OrbSlam2Helper.h
app/src/main/cpp/jni/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/src/main/java/win/intheworld/opencv4androiddemo/: ARCubeRenderer.java  CameraActivity.java  LabActivity.java  MainActivity.java
app/src/main/java/win/intheworld/opencv4androiddemo/adapters/: CameraProjectionAdapter.java
app/src/main/java/win/intheworld/opencv4androiddemo/facedetect/: DetectionBasedTracker.java  FaceDetectActivity.java
app/src/main/java/win/intheworld/opencv4androiddemo/filter/: Filter.java  ImageDetectionFilter.java  NoneFilter.java
app/src/main/java/win/intheworld/opencv4androiddemo/filter/ar/: ARFilter.java  ImageDetectionFilter.java  NoneARFilter.java
app/src/main/java/win/intheworld/opencv4androiddemo/filter/convolution/: StrokeEdgesFilter.java
app/src/main/java/win/intheworld/opencv4androiddemo/filter/curve/: CrossProcessCurveFilter.java  CurveFilter.java  PortraCurveFilter.java  ProviaCurveFilter.java  VelviaCurveFilter.java
app/src/main/java/win/intheworld/opencv4androiddemo/filter/mixer/: RecolorCMVFilter.java  RecolorRCFilter.java  RecolorRGVFilter.java
app/src/main/java/win/intheworld/slam/: OrbSlam2Helper.java
app/src/main/res/drawable/: ic_network_error.xml
app/src/main/res/layout/: activity_main.xml  face_detect_surface_view.xml
app/src/main/res/values/: strings.xml
app/src/test/java/win/intheworld/opencv4androiddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary340/: build.gradle
